# super_enc_demo

./: CMakeLists.txt  README.md  mpp_process.c  mpp_process.h  rknn_process.cpp  rknn_process.h  super_enc_common.c  super_enc_common.h  super_enc_v3_test.cpp  super_enc_v3_test.h  svn_info.h  version.sh  yolov5_seg.c  yolov5_seg.h
libs/: update_log.txt
libs/mpp/include/: kmpp_buffer.h  kmpp_buffer_impl.h  kmpp_frame.h  kmpp_frame_impl.h  kmpp_meta.h  kmpp_meta_impl.h  kmpp_obj.h  kmpp_obj_func.h  kmpp_obj_helper.h  kmpp_obj_impl.h  kmpp_obj_macro.h  kmpp_packet.h  kmpp_packet_impl.h  mpp_internal.h  mpp_sys_cfg.h  rk_mpi_cmd.h  rk_type.h  rk_venc_cmd.h  update_inc_files.bash
libs/mpp/include/base/: mpp_trie.h
libs/mpp/include/osal/: mpp_allocator.h  mpp_callback.h  mpp_common.h  mpp_compat_impl.h  mpp_debug.h  mpp_dev_defs.h  mpp_device.h  mpp_dmabuf.h  mpp_env.h  mpp_eventfd.h  mpp_hash.h  mpp_list.h  mpp_lock.h  mpp_mem.h  mpp_mem_pool.h  mpp_platform.h  mpp_queue.h  mpp_runtime.h  mpp_server.h  mpp_service.h  mpp_service_api.h  mpp_singleton.h  mpp_soc.h  mpp_thread.h  mpp_time.h  mpp_trace.h  osal_2str.h  vcodec_service.h  vcodec_service_api.h
model/: yolov5n_seg_for3576.rknn  yolov5n_seg_for3588.rknn
mpp_utils/: CMakeLists.txt  mpi_enc_utils.c  mpi_enc_utils.h  utils.c  utils.h
nn_utils/: CMakeLists.txt  common.h  image_utils.c
postprocess/: CMakeLists.txt  easy_timer.h  postprocess.cpp  postprocess.h
